--- a/app/views/companyProcess/edit.jade
+++ b/app/views/companyProcess/edit.jade
@@ -1,89 +1,72 @@
 extends ../layouts/default
 block head
-    script(type='text/javascript').
-        var companyProcessObj = !{JSON.stringify(companyProcess).replace(/<\//g, '<\\/')};
+    script(src='/vendor/jquery/jquery.min.js')
+    script(src='/plugins/multiselect/js/jquery.multi-select.js', type='text/javascript')
+    link(type='text/css', href='/plugins/multiselect/css/multi-select.css', rel='stylesheet')
+    link(type='text/css', href='/assets/css/pages.css', rel='stylesheet')
+
     script(src='/isu/js/companyProcess/edit.js')
 
 block content
-      .content-page
-        .content
-          .container
-            // Page-Title
-            .row
-              .col-sm-12
-                .page-title-box
-                  ol.breadcrumb.pull-right
-                    li
-                      a(href='#') Home
-                    li
-                      a(href='#') SD기본정보
-                    li.active 하위업무 수정
-                  h4.page-title 하위업무 수정
-            .row
-              .col-sm-12
-                .card-box
-                  .p-20
-                    .btn-toolbar.form-group
-                      form.form-horizontal.group-border-dashed(id='companyProcessForm' name='form' action='/companyProcess/edit/#{companyProcess._id}' method='post')
-                        .form-group
-                            .pull-left
-                                .btn.btn-primary.waves-effect.waves-light.m-l-5(onclick="location.href='/companyProcess'")
-                                    i.fa.fa-list-ul
-                                    |  목록
-                                .btn.btn-primary.waves-effect.waves-light.m-l-5(onclick="location.href='/companyProcess/delete/#{companyProcess._id}'") 
-                                    i.fa.fa-remove
-                                    |  삭제
-                                .btn.btn-purple.waves-effect.waves-light.m-l-5(onclick="location.href='/companyProcess'")
-                                    i.fa.fa-undo
-                                    |  취소
-                            .pull-right
-                                button.btn.btn-info(type='submit')
-                                    i.fa.fa-send-o
-                                    |  저장
-                        hr
-                        .form-group(style='display:none')
-                            label.col-sm-3.control-label 상위업무코드
-                            .col-sm-3
-                                input.form-control(name='companyProcess[higher_cd]', type='text', placeholder='', value='#{companyProcess.higher_cd}', disabled)
-                        .form-group
-                            label.col-sm-3.control-label 상위업무명
-                            .col-sm-3
-                                input.form-control(name='companyProcess[higher_nm]', type='text', value='#{companyProcess.higher_nm}', disabled)
-                        .form-group
-                            label.col-sm-3.control-label 하위업무코드
-                            .col-sm-3
-                                input.form-control(name='companyProcess[lower_cd]', type='text', value='#{companyProcess.lower_cd}')
-                        .form-group
-                            label.col-sm-3.control-label 하위업무명
-                            .col-sm-3
-                                input.form-control(name='companyProcess[lower_nm]', type='text', value='#{companyProcess.lower_nm}')
-                        .form-group
-                            label.col-sm-3.control-label 설명
-                            .col-sm-9
-                                input.form-control(name='companyProcess[description]', type='text', value='#{companyProcess.description}')
-                        .form-group
-                            label.col-sm-3.control-label 소요시간
-                            .col-sm-3
-                                input.form-control(name='companyProcess[need_hour]', type='text', value='#{companyProcess.need_hour}')
-                        .form-group(style='display:none')
-                            label.col-sm-3.control-label 회사코드
-                            .col-sm-3
-                                input.form-control(name='companyProcess[company_cd]', type='text', value='#{companyProcess.company_cd}')
-                        .form-group(style='display:none')
-                            label.col-sm-3.control-label 회사명
-                            .col-sm-3
-                                input.form-control(name='companyProcess[company_nm]', type='text', value='#{companyProcess.company_nm}')
-                        .form-group(style='display:none')
-                            label.col-sm-3.control-label 사번
-                            .col-sm-3
-                                input.form-control(name='companyProcess[sabun]', type='text', value='#{companyProcess.sabun}')
-                        .form-group(style='display:none')
-                            label.col-sm-3.control-label 등록자
-                            .col-sm-3
-                                input.form-control(name='companyProcess[user_nm]', type='text', value='#{companyProcess.user_nm}')
-                        .form-group
-                            label.col-sm-3.control-label 사용여부
-                            .col-sm-3
-                                select.form-control.input-sm(id='user_flag', name='companyProcess[user_flag]')
-                                    option(value='사용' Selected) 사용 
-                                    option(value='미사용') 미사용
+    body.widescreen.fixed-left-void
+        #wrapper.forced
+            .content-page
+                .content
+                    .container
+                        // Page-Title
+                        .row
+                            .col-sm-12
+                                .page-title-box
+                                    ol.breadcrumb.pull-right
+                                        li
+                                            a(href='#') Home
+                                        li
+                                            a(href='#') SD 기본정보
+                                        li.active 회사별 상위업무지정
+                                    h4.page-title 회사별 상위업무지정
+                        .row
+                            .col-lg-12
+                                .card-box
+                                    form.form-horizontal.group-border-dashed(action='#', onsubmit='return false;')
+                                        .form-group
+                                            label.col-sm-2.control-label 회사명 
+                                            .col-sm-4
+                                                select.form-control(id='company_cd' name='company_cd')
+                                            .col-sm-2
+                                                button.btn.btn-primary(id='searchBtn' type='button') 조회
+                        // start Grid Area
+                        .row
+                            .col-sm-12
+                                .card-box
+                                    .row
+                                        .col-sm-12
+                                            button#saveBtn.btn.btn-primary.waves-effect.waves-light.pull-right(type='button')
+                                                i.fa.fa-paper-plane.m-r-5
+                                                | 저장
+                                    hr.m-t-10.m-b-10
+                                    .row
+                                        .col-sm-12
+                                            table.m-t-5(width='100%')
+                                                tbody
+                                                    tr
+                                                        td(width='20%')
+                                                            h4.pull-left
+                                                                b 지정할 업무리스트
+                                                        td(width='25%')
+                                                            span.pull-right
+                                                                button#select-all.btn.btn-xs.btn-inverse.m-r-5(type='button')
+                                                                    i.fa.fa-check-square-o.m-r-5
+                                                                    |  전체선택
+                                                        td(width='10%')
+                                                        td(width='20%')
+                                                            h4.pull-left
+                                                                b 회사별 상위업무
+                                                        td(width='25%')
+                                                            span.pull-right
+                                                                button#deselect-all.btn.btn-xs.btn-inverse.m-r-5(type='button')
+                                                                    i.fa.fa-check-square-o.m-r-5
+                                                                    |  전체취소
+                                            select#companyProcessSelect.multi-select(name='companyProcessSelect', data-plugin='multiselect', data-selectable-optgroup='true', multiple='multiple')
+
+
+
