--- a/app/views/statistic/mng_month.jade
+++ b/app/views/statistic/mng_month.jade
@@ -2,30 +2,30 @@ extends ../layouts/default
 block head
     title  3-5 담당자월별처리내역
     // Plugins css
-    link(href='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
-    link(href='../plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
-    link(href='../plugins/select2/select2.css', rel='stylesheet', type='text/css')
-    link(href='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
-    link(href='../plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
-    link(href='../plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
-    link(href='../plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
-    link(href='../plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
-    link(href='../plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/core.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/components.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/pages.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/menu_light.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/responsive.css', rel='stylesheet', type='text/css')
-    script(src='assets/js/modernizr.min.js')
+    link(href='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
+    link(href='/plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/select2/select2.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
+    link(href='/plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
+    link(href='/plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
+    link(href='/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
+    link(href='/plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/modernizr.min.js')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-    script(src='assets/js/jquery.core.js')
-    script(src='assets/js/jquery.app.js')
+    script(src='/assets/js/jquery.core.js')
+    script(src='/assets/js/jquery.app.js')
 
     script(src='/vendor/jquery/jquery.min.js')
 
