--- a/app/views/statistic/high_lower.jade
+++ b/app/views/statistic/high_lower.jade
@@ -2,12 +2,19 @@ extends ../layouts/default
 block head
     title 3-3 상위별 하위업무통계
     
-    script(src='/assets/js/jquery.core.js')
-    script(src='/assets/js/jquery.app.js')
+    //script(src='/assets/js/jquery.core.js')
+    //script(src='/assets/js/jquery.app.js')
 
     script(src='/vendor/jquery/jquery-ui.1.11.0.js')
     script(src='/vendor/jquery/jquery.min.js')
+
+
+
+    script(src='/isu/js/statistic/jquery.rowspanizer.js', type='text/javascript')
     script(src='/isu/js/statistic/high_lower.js', type='text/javascript')
+
+
+
 
 block content
     .content-page
@@ -66,7 +73,7 @@ block content
                 .row
                     .col-lg-12
                         .card-box
-                            table.table.table-bordered
+                            table#target-table.table.table-bordered
                                 thead
                                     tr
                                         th.font-12(class='text-center' width='') 상위업무명
