--- a/app/views/statistic/high_lower.jade
+++ b/app/views/statistic/high_lower.jade
@@ -10,7 +10,10 @@ block head
 
 
     script(src='/isu/js/statistic/jquery.rowspanizer.js', type='text/javascript')
+    
+    script(src='https://cdn.datatables.net/plug-ins/1.10.16/api/average().js')
     script(src='/isu/js/statistic/high_lower.js', type='text/javascript')
+
 
 
 
@@ -82,7 +85,7 @@ block content
                                         th.font-12(class='text-center' width='10%') 해결건수
                                         th.font-12(class='text-center' width='10%') 미해결건수
                                         th.font-12(class='text-center' width='10%') 해결률(%)
-                                        th.font-12(class='text-center' width='10%') 평점
+                                        th.font-12(class='text-center' width='10%' ) 평점
                                 tbody#more_list
                                     
 
