--- a/app/views/http/500.jade
+++ b/app/views/http/500.jade
@@ -5,13 +5,13 @@ html
         meta(name='viewport', content='width=device-width,initial-scale=1')
         meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
         meta(name='author', content='Coderthemes')
-        link(rel='shortcut icon', href='assets/images/favicon_1.ico')
+        link(rel='shortcut icon', href='/assets/images/favicon_1.ico')
         title Minton - Responsive Admin Dashboard Template
         link(href='../plugins/switchery/switchery.min.css', rel='stylesheet')
-        link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-        link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
-        link(href='assets/css/style.css', rel='stylesheet', type='text/css')
-        script(src='assets/js/modernizr.min.js')
+        link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+        link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+        link(href='/assets/css/style.css', rel='stylesheet', type='text/css')
+        script(src='/assets/js/modernizr.min.js')
     body
         .ex-page-content
             .container
@@ -37,19 +37,19 @@ html
         script.
             var resizefunc = [];
         // Plugins
-        script(src='assets/js/jquery.min.js')
-        script(src='assets/js/popper.min.js')
+        script(src='/assets/js/jquery.min.js')
+        script(src='/assets/js/popper.min.js')
         // Popper for Bootstrap
-        script(src='assets/js/bootstrap.min.js')
-        script(src='assets/js/detect.js')
-        script(src='assets/js/fastclick.js')
-        script(src='assets/js/jquery.slimscroll.js')
-        script(src='assets/js/jquery.blockUI.js')
-        script(src='assets/js/waves.js')
-        script(src='assets/js/wow.min.js')
-        script(src='assets/js/jquery.nicescroll.js')
-        script(src='assets/js/jquery.scrollTo.min.js')
+        script(src='/assets/js/bootstrap.min.js')
+        script(src='/assets/js/detect.js')
+        script(src='/assets/js/fastclick.js')
+        script(src='/assets/js/jquery.slimscroll.js')
+        script(src='/assets/js/jquery.blockUI.js')
+        script(src='/assets/js/waves.js')
+        script(src='/assets/js/wow.min.js')
+        script(src='/assets/js/jquery.nicescroll.js')
+        script(src='/assets/js/jquery.scrollTo.min.js')
         script(src='../plugins/switchery/switchery.min.js')
         // Custom main Js
-        script(src='assets/js/jquery.core.js')
-        script(src='assets/js/jquery.app.js')
+        script(src='/assets/js/jquery.core.js')
+        script(src='/assets/js/jquery.app.js')
