--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,36 +5,36 @@ html
         meta(name='viewport', content='width=device-width,initial-scale=1')
         meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
         meta(name='author', content='Coderthemes')
-        link(href='assets/images/favicon_1.ico', rel='shortcut icon')
+        link(href='/assets/images/favicon_1.ico', rel='shortcut icon')
         title Service Desk - LOGIN
-        link(type='text/css', href='assets/css/bootstrap.min.css', rel='stylesheet')
-        link(type='text/css', href='assets/css/core.css', rel='stylesheet')
-        link(type='text/css', href='assets/css/icons.css', rel='stylesheet')
-        link(type='text/css', href='assets/css/components.css', rel='stylesheet')
-        link(type='text/css', href='assets/css/pages.css', rel='stylesheet')
-        link(type='text/css', href='assets/css/menu.css', rel='stylesheet')
-        link(type='text/css', href='assets/css/responsive.css', rel='stylesheet')
+        link(type='text/css', href='/assets/css/bootstrap.min.css', rel='stylesheet')
+        link(type='text/css', href='/assets/css/core.css', rel='stylesheet')
+        link(type='text/css', href='/assets/css/icons.css', rel='stylesheet')
+        link(type='text/css', href='/assets/css/components.css', rel='stylesheet')
+        link(type='text/css', href='/assets/css/pages.css', rel='stylesheet')
+        link(type='text/css', href='/assets/css/menu.css', rel='stylesheet')
+        link(type='text/css', href='/assets/css/responsive.css', rel='stylesheet')
         // full-slider
-        link(type='text/css', href='assets/css/full-slider.css', rel='stylesheet')
-        script(src='assets/js/modernizr.min.js')
+        link(type='text/css', href='/assets/css/full-slider.css', rel='stylesheet')
+        script(src='/assets/js/modernizr.min.js')
         // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
         // WARNING: Respond.js doesn't work if you view the page via file://
         //if lt IE 9
             script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
             script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-        script(src='assets/js/jquery.min.js')
-        script(src='assets/js/bootstrap.min.js')
-        script(src='assets/js/detect.js')
-        script(src='assets/js/fastclick.js')
-        script(src='assets/js/jquery.slimscroll.js')
-        script(src='assets/js/jquery.blockUI.js')
-        script(src='assets/js/waves.js')
-        script(src='assets/js/wow.min.js')
-        script(src='assets/js/jquery.nicescroll.js')
-        script(src='assets/js/jquery.scrollTo.min.js')
+        script(src='/assets/js/jquery.min.js')
+        script(src='/assets/js/bootstrap.min.js')
+        script(src='/assets/js/detect.js')
+        script(src='/assets/js/fastclick.js')
+        script(src='/assets/js/jquery.slimscroll.js')
+        script(src='/assets/js/jquery.blockUI.js')
+        script(src='/assets/js/waves.js')
+        script(src='/assets/js/wow.min.js')
+        script(src='/assets/js/jquery.nicescroll.js')
+        script(src='/assets/js/jquery.scrollTo.min.js')
         // Custom main Js
-        script(src='assets/js/jquery.core.js')
-        script(src='assets/js/jquery.app.js')
+        script(src='/assets/js/jquery.core.js')
+        script(src='/assets/js/jquery.app.js')
         // Script to Activate the Carousel
         script.
             $('.carousel').carousel({
@@ -73,7 +73,7 @@ html
             .login-box
                 .text-center
                     a.logo-lg(href='#')
-                        img(src='assets/images/ci_isusystem.png', alt='isusystem')
+                        img(src='/assets/images/ci_isusystem.png', alt='isusystem')
                 form.form-horizontal.m-t-20(name='login' action='/index' method='post')
                     fieldset
                         -if(message == null){
