--- a/app/views/manager/work_assign.jade
+++ b/app/views/manager/work_assign.jade
@@ -5,7 +5,7 @@ block head
     meta(name='viewport', content='width=device-width,initial-scale=1')
     meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
     meta(name='author', content='Coderthemes')
-    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
+    link(rel='shortcut icon', href='/assets/images/favicon_1.ico')
     title  2-3 나의 업무지정
     // Plugins css
     link(href='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
@@ -19,14 +19,14 @@ block head
     // summernot
     link(href='../plugins/summernote/dist/summernote.css', rel='stylesheet')
     link(href='../plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/core.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/components.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/pages.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/menu_light.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/responsive.css', rel='stylesheet', type='text/css')
-    script(src='assets/js/modernizr.min.js')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/modernizr.min.js')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
@@ -40,16 +40,16 @@ block head
     link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 
     // jQuery
-    script(src='assets/js/jquery.min.js')
-    script(src='assets/js/bootstrap.min.js')
-    script(src='assets/js/detect.js')
-    script(src='assets/js/fastclick.js')
-    script(src='assets/js/jquery.slimscroll.js')
-    script(src='assets/js/jquery.blockUI.js')
-    script(src='assets/js/waves.js')
-    script(src='assets/js/wow.min.js')
-    script(src='assets/js/jquery.nicescroll.js')
-    script(src='assets/js/jquery.scrollTo.min.js')
+    script(src='/assets/js/jquery.min.js')
+    script(src='/assets/js/bootstrap.min.js')
+    script(src='/assets/js/detect.js')
+    script(src='/assets/js/fastclick.js')
+    script(src='/assets/js/jquery.slimscroll.js')
+    script(src='/assets/js/jquery.blockUI.js')
+    script(src='/assets/js/waves.js')
+    script(src='/assets/js/wow.min.js')
+    script(src='/assets/js/jquery.nicescroll.js')
+    script(src='/assets/js/jquery.scrollTo.min.js')
     script(src='../plugins/switchery/switchery.min.js')
     script(src='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
     script(type='text/javascript', src='../plugins/multiselect/js/jquery.multi-select.js')
@@ -64,8 +64,8 @@ block head
     script(src='../plugins/bootstrap-daterangepicker/daterangepicker.js')
     // form summernote
     script(src='../plugins/summernote/dist/summernote.min.js')
-    script(src='assets/js/jquery.core.js')
-    script(src='assets/js/jquery.app.js')
+    script(src='/assets/js/jquery.core.js')
+    script(src='/assets/js/jquery.app.js')
 
     script(src='/vendor/jquery/jquery.min.js')
 
