--- a/app/views/search/mng_detail.jade
+++ b/app/views/search/mng_detail.jade
@@ -180,16 +180,16 @@ block content
     script.
         var resizefunc = [];
     // jQuery
-    script(src='assets/js/jquery.min.js')
-    script(src='assets/js/bootstrap.min.js')
-    script(src='assets/js/detect.js')
-    script(src='assets/js/fastclick.js')
-    script(src='assets/js/jquery.slimscroll.js')
-    script(src='assets/js/jquery.blockUI.js')
-    script(src='assets/js/waves.js')
-    script(src='assets/js/wow.min.js')
-    script(src='assets/js/jquery.nicescroll.js')
-    script(src='assets/js/jquery.scrollTo.min.js')
+    script(src='/assets/js/jquery.min.js')
+    script(src='/assets/js/bootstrap.min.js')
+    script(src='/assets/js/detect.js')
+    script(src='/assets/js/fastclick.js')
+    script(src='/assets/js/jquery.slimscroll.js')
+    script(src='/assets/js/jquery.blockUI.js')
+    script(src='/assets/js/waves.js')
+    script(src='/assets/js/wow.min.js')
+    script(src='/assets/js/jquery.nicescroll.js')
+    script(src='/assets/js/jquery.scrollTo.min.js')
     script(src='../plugins/switchery/switchery.min.js')
     script(src='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
     script(type='text/javascript', src='../plugins/multiselect/js/jquery.multi-select.js')
@@ -202,5 +202,5 @@ block content
     script(src='../plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
     script(src='../plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
     script(src='../plugins/bootstrap-daterangepicker/daterangepicker.js')
-    script(src='assets/js/jquery.core.js')
-    script(src='assets/js/jquery.app.js')
+    script(src='/assets/js/jquery.core.js')
+    script(src='/assets/js/jquery.app.js')
